# sampleservice/http/init.go
@@ -3,39 +3,72 @@
 package http
 
 import (
-	"context"
-	"log"
+	"net/http"
 
-	gruntime "github.com/grpc-ecosystem/grpc-gateway/runtime"
-	"google.golang.org/grpc"
+	// gruntime "github.com/grpc-ecosystem/grpc-gateway/runtime"
+	// "google.golang.org/grpc"
+	"github.com/gin-gonic/gin"
 
+	zeusmwhttp "gitlab.dg.com/BackEnd/jichuchanpin/tif/zeus/middleware/http"
 	"gitlab.dg.com/BackEnd/jichuchanpin/tif/zeus/service"
 
 	"zeus-examples/sampleservice/global"
-	hello "zeus-examples/sampleservice/proto/gw"
+	"zeus-examples/sampleservice/handler"
+	// hello "zeus-examples/sampleservice/proto/gw"
 )
 
+const (
+	Route_HelloHdlr_SayHello zeusmwhttp.RouteLink = "Route_HelloHdlr_SayHello"
+	Route_HelloHdlr_PingPong zeusmwhttp.RouteLink = "Route_HelloHdlr_PingPong"
+)
+
+var helloHdlr = &handler.Hello{}
+var helloHdlrRoutes = map[zeusmwhttp.RouteLink]*zeusmwhttp.Route{
+	Route_HelloHdlr_SayHello: &zeusmwhttp.Route{
+		RLink:  Route_HelloHdlr_SayHello,
+		Method: http.MethodPost,
+		Path:   "/api/v1/hello",
+		Handle: zeusmwhttp.GenerateGinHandle(helloHdlr.SayHello),
+	},
+	Route_HelloHdlr_PingPong: &zeusmwhttp.Route{
+		RLink:  Route_HelloHdlr_PingPong,
+		Method: http.MethodPost,
+		Path:   "/api/v1/pingpong",
+		Handle: zeusmwhttp.GenerateGinHandle(helloHdlr.PingPong),
+	},
+}
+
 func init() {
-	// grpc gateway
-	global.ServiceOpts = append(global.ServiceOpts, service.WithHttpGWhandlerRegisterFnOption(gwHandlerRegister))
+	// // grpc gateway
+	// global.ServiceOpts = append(global.ServiceOpts, service.WithHttpGWhandlerRegisterFnOption(gwHandlerRegister))
+
 	// http handler
 	global.ServiceOpts = append(global.ServiceOpts, service.WithHttpHandlerRegisterFnOption(getHandlerRegisterFn()))
 }
 
-func gwHandlerRegister(ctx context.Context, endpoint string, opts []grpc.DialOption) (m *gruntime.ServeMux, err error) {
-	optsTmp := opts
-	mux := gruntime.NewServeMux()
-	if len(opts) == 0 {
-		optsTmp = []grpc.DialOption{grpc.WithInsecure()}
-	}
-	if err = hello.RegisterHelloHandlerFromEndpoint(ctx, mux, endpoint, optsTmp); err != nil {
-		log.Println("hellogw.RegisterHelloHandlerFromEndpoint err:", err)
-		return
-	}
-	m = mux
-	return
-}
+// func gwHandlerRegister(ctx context.Context, endpoint string, opts []grpc.DialOption) (m *gruntime.ServeMux, err error) {
+// 	optsTmp := opts
+// 	mux := gruntime.NewServeMux()
+// 	if len(opts) == 0 {
+// 		optsTmp = []grpc.DialOption{grpc.WithInsecure()}
+// 	}
+// 	if err = hello.RegisterHelloHandlerFromEndpoint(ctx, mux, endpoint, optsTmp); err != nil {
+// 		log.Println("hellogw.RegisterHelloHandlerFromEndpoint err:", err)
+// 		return
+// 	}
+// 	m = mux
+// 	return
+// }
 
 func getHandlerRegisterFn() service.HttpHandlerRegisterFn {
-	return serveHttpHandler
+	return serveHTTPHandler
+}
+
+func registerRoutesForHelloHandler(rootRouter *gin.RouterGroup, subGroup map[string]*gin.RouterGroup, addMWFn ...func(routes map[zeusmwhttp.RouteLink]*zeusmwhttp.Route)) {
+	for _, f := range addMWFn {
+		f(helloHdlrRoutes)
+	}
+	for _, r := range helloHdlrRoutes {
+		zeusmwhttp.Method(rootRouter, subGroup, r)
+	}
 }
